# plutex

./: .env.example  .gitignore  README.md  mypy_technicals_debug_log.md  pyproject.toml
archive/: fix_unions.py
docs/: initial_setup_notes.md
docs/audits/: plutex_audit_2025-04-03.md  plutus_audit_2025-04-03.md
docs/plans/: fix-gemini-json-error.md
memory-bank/: ab-comparison-findings.md  activeContext.md  productContext.md  progress.md  projectBrief.md  systemPatterns.md  techContext.md
plutex/: __init__.py  backtester.py  cli.py  main.py
plutex/agents/: ben_graham.py  bill_ackman.py  cathie_wood.py  charlie_munger.py  fundamentals.py  michael_burry.py  peter_lynch.py  phil_fisher.py  portfolio_manager.py  risk_manager.py  sentiment.py  stanley_druckenmiller.py  technicals.py  valuation.py  warren_buffett.py
plutex/data/: cache.py
plutex/graph/: state.py
plutex/llm/: models.py
plutex/tools/: api.py
plutex/utils/: analysts.py  llm.py  progress.py
src/: backtester.py  main.py
src/agents/: ben_graham.py  bill_ackman.py  cathie_wood.py  charlie_munger.py  fundamentals.py  michael_burry.py  peter_lynch.py  phil_fisher.py  portfolio_manager.py  risk_manager.py  sentiment.py  stanley_druckenmiller.py  technicals.py  valuation.py  warren_buffett.py
src/data/: cache.py  models.py
src/graph/: __init__.py
src/llm/: models.py
src/tools/: api.py
src/utils/: analysts.py  display.py  llm.py
